fixed base module html

--- a/base-module.html
+++ b/base-module.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" name="viewport" content="width=device-width, intitial-scale=1.0" />
+        <meta charset="UTF-8" name="viewport" content="width=device-width" />
         <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
         <link href="modular-tutorials.css" rel="stylesheet">
         <title>XRPL Base Module</title>
@@ -167,7 +167,7 @@
                         </span>
                     </td>
                     <td>
-                        <input type="text" id="destinationField" size="40"></input>
+                        <input type="text" title="" placeholder="Destination"id="destinationField" size="40"></input>
                         <br>
                     </td>
                     <td align="left" valign="top">
@@ -177,7 +177,7 @@
                 <tr>
                     <td colspan="2">
                         <p align="right">
-                            <textarea id="resultField" cols="80" rows="20"></textarea>
+                            <textarea id="resultField" title="" placeholder="Result" cols="80" rows="20"></textarea>
                         </p>
                     </td>
                     <td align="left" valign="top">
