--- a/create-conditional-escrow.html
+++ b/create-conditional-escrow.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width" />
     <title>Create a Conditional Escrow</title>
     <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
     <link href="modular-tutorials.css" rel="stylesheet">
@@ -164,7 +166,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="destinationField" size="40"></input>
+                    <input type="text" title="" placeholder="Destination" id="destinationField" size="40"></input>
                     <br>
                 </td>
                 <td align="left" valign="top">
@@ -178,7 +180,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="escrowConditionField" size="40"></input>
+                    <input type="text" title="" placeholder="Escrow Condition" id="escrowConditionField" size="40"></input>
                     <br>
                 </td>
                 <td align="left" valign="top">
@@ -192,7 +194,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="escrowFulfillmentField" size="40"></input>
+                    <input type="text" title="" placeholder="Escrow Fulfillment" id="escrowFulfillmentField" size="40"></input>
                     <br>
                 </td>
                 <td>
@@ -206,7 +208,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="escrowCancelDateField" size="40"></input>
+                    <input type="text" title="" placeholder="Escrow Cancel" id="escrowCancelDateField" size="40"></input>
                     <br>
                 </td>
                 <td align="left" valign="top">
@@ -220,7 +222,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="escrowSequenceNumberField" size="40"></input>
+                    <input type="text" title="" placeholder="Escrow Sequence Number" id="escrowSequenceNumberField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -234,7 +236,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="escrowOwnerField" size="40"></input>
+                    <input type="text" title="" placeholder="Escrow Owner" id="escrowOwnerField" size="40"></input>
                     <br>
                 </td>             
             </tr>
@@ -245,7 +247,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="transactionField" size="40"></input>
+                    <input type="text" title="" placeholder="Transaction" id="transactionField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -254,7 +256,7 @@
             <tr>
                 <td colspan="2">
                     <p align="right">
-                        <textarea id="resultField" cols="80" rows="20"></textarea>
+                        <textarea id="resultField" title="" placeholder="Result" cols="80" rows="20"></textarea>
                     </p>
                 </td>
                 <td align="left" valign="top">
