fixed offer html

--- a/create-offer.html
+++ b/create-offer.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width" />
     <title>Create Offers</title>
     <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
     <link href="modular-tutorials.css" rel="stylesheet">
@@ -165,10 +167,10 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="payCurrencyField" size="40"></input>
+                    <input type="text" title="" placeholder="Pay Currency" id="payCurrencyField" size="40"></input>
                 </td>
                 <td>
-                    <input type="text" id="getCurrencyField" size="40"></input>
+                    <input type="text" title="" placeholder="Get Currency" id="getCurrencyField" size="40"></input>
                 </td> 
                 <td>          
                     <button type="button" onClick="createOffer()">Create Offer</button>
@@ -181,10 +183,10 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="payIssuerField" size="40"></input>&nbsp;&nbsp;
+                    <input type="text" title="" placeholder="Pay Issuer" id="payIssuerField" size="40"></input>&nbsp;&nbsp;
                 </td>  
                 <td>
-                    <input type="text" id="getIssuerField" size="40"></input>&nbsp;&nbsp;
+                    <input type="text" title="" placeholder="Get Issuer" id="getIssuerField" size="40"></input>&nbsp;&nbsp;
                 </td>
                 <td>
                     <button type="button" onClick="getOffers()">Get Offers</button>
@@ -197,10 +199,10 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="payAmountField" size="40"></input>
+                    <input type="text" title="" placeholder="Pay Amount" id="payAmountField" size="40"></input>
                 </td> 
                 <td>
-                    <input type="text" id="getAmountField" size="40"></input>
+                    <input type="text" title="" placeholder="Get Amount" id="getAmountField" size="40"></input>
                 </td>
                 <td>
                     <button type="button" onClick="cancelOffer()">Cancel Offer</button>
@@ -213,7 +215,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="offerSequenceField" size="40"></input>
+                    <input type="text" title="" placeholder="Offer Sequence" id="offerSequenceField" size="40"></input>
                 </td> 
                 <td></td>
                 <td>
@@ -223,7 +225,7 @@
             <tr>
                 <td colspan="3">
                     <p align="right">
-                        <textarea id="resultField" cols="80" rows="20"></textarea>
+                        <textarea id="resultField" title="" placeholder="Result" cols="80" rows="20"></textarea>
                     </p>
                 </td>
                 <td align="left" valign="top">
