fixed time escrow html

--- a/create-time-escrow.html
+++ b/create-time-escrow.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width" />
     <title>Create a Time-based Escrow</title>
     <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
     <link href="modular-tutorials.css" rel="stylesheet">
@@ -163,7 +165,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="destinationField" size="40"></input>
+                    <input type="text" title="" placeholder="Destination" id="destinationField" size="40"></input>
                     <br>
                 </td>
                 <td align="left" valign="top">
@@ -177,7 +179,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="escrowFinishTimeField" size="40"></input>
+                    <input type="text" title="" placeholder="Escrow Finish Time" id="escrowFinishTimeField" size="40"></input>
                     <br>
                 </td>
                 <td align="left" valign="top">
@@ -191,7 +193,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="escrowCancelTimeField" size="40"></input>
+                    <input type="text" title="" placeholder="Escrow Cancel Time" id="escrowCancelTimeField" size="40"></input>
                     <br>
                 </td>
                 <td align="left" valign="top">
@@ -206,7 +208,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="escrowSequenceNumberField" size="40"></input>
+                    <input type="text" title="" placeholder="Escrow Sequence Number" id="escrowSequenceNumberField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -220,7 +222,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="escrowOwnerField" size="40"></input>
+                    <input type="text" title="" placeholder="Escrow Owner" id="escrowOwnerField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -234,7 +236,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="transactionField" size="40"></input>
+                    <input type="text" title="" placeholder="Transaction" id="transactionField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -243,7 +245,7 @@
             <tr>
                 <td colspan="2">
                     <p align="right">
-                        <textarea id="resultField" cols="80" rows="20"></textarea>
+                        <textarea id="resultField" title="" placeholder="Result" cols="80" rows="20"></textarea>
                     </p>
                 </td>
                 <td align="left" valign="top">
