fixed send checks html

--- a/send-checks.html
+++ b/send-checks.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width" />
     <title>Send Checks</title>
     <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
     <link href="modular-tutorials.css" rel="stylesheet">
@@ -155,7 +157,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="currencyField" size="40"></input>
+                    <input type="text" title="" placeholder="currencyCode" id="currencyField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -169,7 +171,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="issuerField" size="40"></input>
+                    <input type="text" title="" placeholder="Issuer" id="issuerField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -197,7 +199,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="destinationField" size="40"></input>
+                    <input type="text" title="" placeholder="Destination" id="destinationField" size="40"></input>
                     <br>
                 </td>
                 <td align="left" valign="top">
@@ -211,7 +213,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="checkIdField" size="40"></input>
+                    <input type="text" title="" placeholder="checkId" id="checkIdField" size="40"></input>
                     <br>
                 </td>
                 <td align="left" valign="top">
@@ -221,7 +223,7 @@
             <tr>
                 <td colspan="2">
                     <p align="right">
-                        <textarea id="resultField" cols="80" rows="20"></textarea>
+                        <textarea id="resultField" title="" placeholder="Result" cols="80" rows="20"></textarea>
                     </p>
                 </td>
                 <td align="left" valign="top">
