fixed send currency html

--- a/send-currency.html
+++ b/send-currency.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width" />
     <title>Send Currency</title>
     <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
     <link href="modular-tutorials.css" rel="stylesheet">
@@ -154,7 +156,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="currencyField" size="40"></input>
+                    <input type="text" title="" placeholder="Currency Code" id="currencyField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -168,7 +170,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="issuerField" size="40"></input>
+                    <input type="text" title="" placeholder="Issuer" id="issuerField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -196,14 +198,14 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="destinationField" size="40"></input>
+                    <input type="text" title="" placeholder="Destination" id="destinationField" size="40"></input>
                     <br>
                 </td>
             </tr>
             <tr>
                 <td colspan="2">
                     <p align="right">
-                        <textarea id="resultField" cols="80" rows="20"></textarea>
+                        <textarea id="resultField" title="" placeholder="Result" cols="80" rows="20"></textarea>
                     </p>
                 </td>
                 <td align="left" valign="top">
