--- a/send-mpt.html
+++ b/send-mpt.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width" />
     <title>Send MPT</title>
     <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
     <link href="modular-tutorials.css" rel="stylesheet">
@@ -153,7 +155,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="mptIdField" size="40"></input>
+                    <input type="text" title="" placeholder="MPT Issuance ID" id="mptIdField" size="40"></input>
                     <br>
                 </td> 
                 <td>
@@ -182,7 +184,7 @@
                     </span>
                 </td>
                 <td>
-                    <input type="text" id="destinationField" size="40"></input>
+                    <input type="text" title="" placeholder="Destination" id="destinationField" size="40"></input>
                     <br>
                 </td>
                 <td align="left" valign="top">
@@ -192,7 +194,7 @@
             <tr>
                 <td colspan="2">
                     <p align="right">
-                        <textarea id="resultField" cols="80" rows="20"></textarea>
+                        <textarea id="resultField" title="" placeholder="Result" cols="80" rows="20"></textarea>
                     </p>
                 </td>
                 <td align="left" valign="top">
